# employee-assistant

./: data.py  main.py  pyproject.toml
first_line_manager/: combined_productivity_dashboard.py  dashboard.py  mgr_engagement_compliance_dashboard.py  mgr_overview_dashboard.py  st_1st_line_engagement_compliance.py  st_1st_line_productivity_dashboard.py  st_mgr1_performance_metrics.py  st_mgr_dashboard.py  st_mgr_productivity_dashboard.py
hr/: dashboard.py  hr_compliance_engagement_dashboard.py  hr_demographics_dashboard.py  hr_overview_dashboard.py  hr_recruitment_dashboard.py  hr_training_dashboard.py  st_hr_compliance_engagement_dashboard.py  st_hr_dashboard.py  st_hr_demographics_dashboard.py  st_hr_recruitment_dashboard.py  st_hr_training_dashboard.py
ic/: dashboard.py  ic_learning_dashboard.py  ic_perf_and_careeer_dashboard.py  ic_productivity_dashboard.py  ic_task_dashboard.py
second_line_manager_or_director/: dashboard.py  org_engagement_and_compliance_dashboard.py  org_executive_summary.py  org_performance_dashboard.py  org_productivity_dashboard.py  st_2nd_mgr_engagement_and_compliance_dashboard.py  st_2nd_project_and_portfolio_dashboard.py  st_org_executive_summary.py  st_org_perf_dashboard.py  st_org_productivity_2.py  st_org_productivity_dashboard.py
ui/: style.py  title_bar.py
