[tool.poetry]
name = "employee-assistant"
version = "0.1.0"
description = ""
authors = ["Vijay Sankarasubramanian <vijayanands@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
streamlit-echarts = "^0.4.0"
wordcloud = "^1.9.3"
numpy = "^2.1.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
